Fix typo in security postbox

--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Seravo Must-use Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
 "POT-Creation-Date: 2019-06-10T10:46:55+03:00\n"
-"PO-Revision-Date: 2019-06-10 10:53+0300\n"
+"PO-Revision-Date: 2019-06-13 11:51+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.com>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -906,7 +906,7 @@ msgstr "Kirjautumispommitusten esto"
 
 #: modules/security.php:97
 msgid "Disable XML-RPC"
-msgstr "Estä XML-RPC tominta"
+msgstr "Estä XML-RPC toiminta"
 
 #: modules/security.php:105
 msgid "Disable WP-JSON user enumeration"
