--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Seravo Must-use Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2020-03-02T13:11:33+02:00\n"
-"PO-Revision-Date: 2020-03-02 13:33+0200\n"
+"POT-Creation-Date: 2020-05-27T14:33:42+03:00\n"
+"PO-Revision-Date: 2020-05-27 14:54+0300\n"
 "Last-Translator: Samuli Lehtonen <samuli@seravo.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 
 #. Plugin Name of the plugin
 msgid "Seravo Plugin"
@@ -39,32 +39,99 @@ msgstr ""
 msgid "API call failed. Aborting. The error has been logged."
 msgstr "Rajapintayhteys epäonnistui. Virhe on lisätty lokiin."
 
-#: lib/domains-dns.php:23
-msgid "Zone for: "
-msgstr "Zone verkkotunnukselle: "
+#: lib/domain-tables.php:52 lib/domain-tables.php:54
+msgid "Primary"
+msgstr "Ensisijainen"
 
-#: lib/domains-dns.php:23
-msgid "updated: "
-msgstr "päivitetty: "
+#: lib/domain-tables.php:59 lib/domain-tables.php:60
+msgid "Subdomains don't have their own zone."
+msgstr "Aliverkkotunnuksilla ei ole omia verkkotunnustietoja."
 
-#: lib/domains-dns.php:26 modules/sitestatus.php:319
+#: lib/domain-tables.php:59 lib/domain-tables.php:63 lib/domain-tables.php:70
+#: lib/domain-tables.php:73 lib/domains-page.php:64
+msgid "View"
+msgstr "Näytä"
+
+#: lib/domain-tables.php:60 lib/domain-tables.php:65 lib/domain-tables.php:67
+#: lib/domain-tables.php:71 lib/domain-tables.php:74 lib/domains-page.php:66
+msgid "Edit"
+msgstr "Muokkaa"
+
+#: lib/domain-tables.php:65
+msgid "DNS editing is disabled for this site."
+msgstr "DNS-tietojen muokkaaminen on estetty tällä sivustolla."
+
+#: lib/domain-tables.php:71
+msgid "DNS not managed by Seravo."
+msgstr "Seravo ei hallinnoi nimipalveluita."
+
+#: lib/domain-tables.php:73 lib/domain-tables.php:74
+msgid "This domain doesn't have a zone."
+msgstr "Verkkotunnuksella ei ole verkkotunnustietoja."
+
+#: lib/domain-tables.php:79
+msgid "Make Primary (experimental)"
+msgstr "Aseta ensisijaiseksi (kokeellinen)"
+
+#: lib/domain-tables.php:82
+msgid "This domain is already a primary domain."
+msgstr "Tämä verkkotunnus on valmiiksi ensisijainen."
+
+#: lib/domain-tables.php:82
+msgid "Make Primary"
+msgstr "Aseta ensisijaiseksi"
+
+#: lib/domain-tables.php:112 lib/domains-page.php:120
+#: modules/sitestatus.php:344
+msgid "Domain"
+msgstr "Verkkotunnus"
+
+#: lib/domain-tables.php:113 lib/domains-page.php:121
+msgid "Expires"
+msgstr "Erääntyy"
+
+#: lib/domain-tables.php:114 lib/domains-page.php:122
+msgid "DNS"
+msgstr "Nimipalvelut"
+
+#: lib/domain-tables.php:115 lib/domains-page.php:123
+msgid "Managed by"
+msgstr "Hallinnoija"
+
+#: lib/domain-tables.php:214
+msgid "Customer"
+msgstr "Asiakas"
+
+#: lib/domain-tables.php:323 lib/domains-page.php:279
+msgid "Source"
+msgstr "Lähde"
+
+#: lib/domain-tables.php:324 lib/domains-page.php:280
+msgid "Destinations"
+msgstr "Kohde"
+
+#: lib/domain-tables.php:425
+msgid "Update time:"
+msgstr "Päivitysaika:"
+
+#: lib/domain-tables.php:430 lib/domains-dns.php:26 modules/sitestatus.php:319
 msgid "Name"
 msgstr "Nimi"
 
-#: lib/domains-dns.php:27
+#: lib/domain-tables.php:431 lib/domains-dns.php:27
 msgid "TTL"
 msgstr "TTL"
 
-#: lib/domains-dns.php:29
+#: lib/domain-tables.php:433 lib/domains-dns.php:29
 msgid "Type"
 msgstr "Tyyppi"
 
-#: lib/domains-dns.php:30
+#: lib/domain-tables.php:434 lib/domains-dns.php:30
 msgid "Value"
 msgstr "Arvo"
 
 #. translators: %s domain of the site
-#: lib/domains-dns.php:58
+#: lib/domain-tables.php:469 lib/domains-dns.php:58
 msgid ""
 "Our systems have detected that <strong>%s</strong> does not point to the "
 "Seravo servers. For your protection, manual editing is disabled. Please "
@@ -77,15 +144,15 @@ msgstr ""
 "asiakaspalveluun mikäli haluat muokata kyseisiä tietueita. Voit julkaista "
 "sivustosi silloin kuin haluat oheisen painikkeen avulla:"
 
-#: lib/domains-dns.php:63
+#: lib/domain-tables.php:474 lib/domains-dns.php:63
 msgid "Publish"
 msgstr "Julkaise"
 
-#: lib/domains-dns.php:78
+#: lib/domain-tables.php:484 lib/domains-dns.php:78
 msgid "Compulsory Records"
 msgstr "Pakolliset tietueet"
 
-#: lib/domains-dns.php:79
+#: lib/domain-tables.php:485 lib/domains-dns.php:79
 msgid ""
 "It is not recommended to edit these records. Please contact the Seravo "
 "customer service if you want changes to be done to them."
@@ -93,11 +160,11 @@ msgstr ""
 "Näiden tietueiden muokkaaminen ei ole suositeltavaa. Ota yhteyttä Seravon "
 "asiakaspalveluun mikäli tahdot niitä muutettavan."
 
-#: lib/domains-dns.php:81
+#: lib/domain-tables.php:487 lib/domains-dns.php:81
 msgid "Editable records"
 msgstr "Muokattavat tietueet"
 
-#: lib/domains-dns.php:82
+#: lib/domain-tables.php:488 lib/domains-dns.php:82
 msgid ""
 "Here you can add, edit and delete records. Please do not try to add records "
 "conflicting with the compulsory records. They will not be activated."
@@ -106,17 +173,25 @@ msgstr ""
 "tietueita jotka ovat ristiriidassa pakollisten tietueiden kanssa. Niitä ei "
 "oteta huomioon."
 
-#: lib/domains-dns.php:89
+#: lib/domain-tables.php:495 lib/domains-dns.php:89
 msgid "Update Zone"
 msgstr "Päivitä verkkotunnustiedot"
 
-#: lib/domains-page.php:64
-msgid "View"
-msgstr "Näytä"
+#: lib/domain-tables.php:541 lib/domains-page.php:389
+msgid "Fetch Forwards"
+msgstr "Hae edelleenohjaukset"
 
-#: lib/domains-page.php:66
-msgid "Edit"
-msgstr "Muokkaa"
+#: lib/domain-tables.php:549 lib/domains-page.php:397
+msgid "No valid domains were found!"
+msgstr "Verkkotunnuksia ei löytynyt!"
+
+#: lib/domains-dns.php:23
+msgid "Zone for: "
+msgstr "Zone verkkotunnukselle: "
+
+#: lib/domains-dns.php:23
+msgid "updated: "
+msgstr "päivitetty: "
 
 #: lib/domains-page.php:69
 msgid "Primary Domain"
@@ -135,67 +210,36 @@ msgstr "Aliverkkotunnuksilla ei ole omia verkkotunnustietoja"
 msgid "This domain doesn't have a zone"
 msgstr "Verkkotunnuksella ei ole verkkotunnustietoja"
 
-#: lib/domains-page.php:120 modules/sitestatus.php:344
-msgid "Domain"
-msgstr "Verkkotunnus"
-
-#: lib/domains-page.php:121
-msgid "Expires"
-msgstr "Erääntyy"
-
-#: lib/domains-page.php:122
-msgid "DNS"
-msgstr "Nimipalvelut"
-
-#: lib/domains-page.php:123
-msgid "Managed by"
-msgstr "Hallinnoija"
-
-#: lib/domains-page.php:279
-msgid "Source"
-msgstr "Lähde"
-
-#: lib/domains-page.php:280
-msgid "Destinations"
-msgstr "Kohde"
-
-#: lib/domains-page.php:389
-msgid "Fetch Forwards"
-msgstr "Hae edelleenohjaukset"
-
-#: lib/domains-page.php:397
-msgid "No valid domains were found!"
-msgstr "Verkkotunnuksia ei löytynyt!"
-
-#: lib/domains-page.php:414 modules/toolbox.php:67 modules/toolbox.php:68
+#: lib/domains-page.php:414 modules/domains.php:44 modules/toolbox.php:67
+#: modules/toolbox.php:68
 msgid "Domains"
 msgstr "Verkkotunnukset"
 
-#: lib/domains-page.php:416
+#: lib/domains-page.php:416 modules/domains.php:95
 msgid "Domains routed to this WordPress site are listed below."
 msgstr "Tähän WordPress-sivustoon kytketyt verkkotunnukset on lueteltu alla."
 
-#: lib/domains-page.php:436 lib/domains-page.php:441
+#: lib/domains-page.php:436 lib/domains-page.php:441 modules/domains.php:52
 msgid "Mails"
 msgstr "Sähköpostit"
 
-#: lib/security-ajax.php:76
+#: lib/security-ajax.php:78
 msgid "No login data"
 msgstr "Ei kirjautumistietoja"
 
-#: lib/security-ajax.php:81
+#: lib/security-ajax.php:83
 msgid "IP address"
 msgstr "IP-osoite"
 
-#: lib/security-ajax.php:82
+#: lib/security-ajax.php:84
 msgid "User"
 msgstr "Käyttäjä"
 
-#: lib/security-ajax.php:83
+#: lib/security-ajax.php:85
 msgid "Date"
 msgstr "Pvm"
 
-#: lib/security-ajax.php:84
+#: lib/security-ajax.php:86
 msgid "Time"
 msgstr "Aika"
 
@@ -204,7 +248,7 @@ msgid "Drag boxes here"
 msgstr "Raahaa laatikot tähän"
 
 #. translators: %s: Togglable postbox title
-#: lib/seravo-postbox.php:275
+#: lib/seravo-postbox.php:287
 msgid "Toggle panel: %s"
 msgstr "Näytä lisää: %s"
 
@@ -398,17 +442,57 @@ msgstr "Aja kuiva-ajo"
 msgid "Run wp search-replace"
 msgstr "Aja wp search-replace"
 
-#: modules/domains.php:52
-msgid "The zone update failed"
-msgstr "Zonen päivitys epäonnistui"
+#: modules/domains.php:74
+msgid "Domains couldn't be loaded."
+msgstr "Verkkotunnuksia ei voitu ladata."
 
-#: modules/domains.php:53
+#: modules/domains.php:75
+msgid "Couldn't fetch the section"
+msgstr "Osiota ei voitu ladata"
+
+#: modules/domains.php:76
+msgid "No data returned for the update request."
+msgstr "Päivityspyyntö ei palauttanut dataa."
+
+#: modules/domains.php:77
+msgid "The zone update failed!"
+msgstr "Zonen päivitys epäonnistui!"
+
+#: modules/domains.php:78
 msgid "The zone was updated succesfully!"
 msgstr "Zonen päivitys onnistui!"
 
-#: modules/domains.php:54
-msgid "The following modifications were done for the zone: "
-msgstr "Zonelle tehtiin seuraavat muutokset: "
+#: modules/domains.php:79
+msgid "No data returned for the dns fetch."
+msgstr "DNS-tietojen lataus ei palauttanut dataa."
+
+#: modules/domains.php:80
+msgid "DNS fetch failed! Please refresh the page."
+msgstr "DNS-tietojen haku epäonnistui! Kokeile päivittää sivu."
+
+#: modules/domains.php:81
+msgid "The zone was updated without changes."
+msgstr "Verkkotunnustiedot päivitettiin ilman muutoksia."
+
+#: modules/domains.php:82
+msgid "Changing the primary domain..."
+msgstr "Vaihdetaan ensisijaista verkkotunnusta..."
+
+#: modules/domains.php:99
+msgid "Loading domains..."
+msgstr "Ladataan verkkotunnuksia..."
+
+#: modules/domains.php:103
+msgid "Are you sure you want to change the primary domain?"
+msgstr "Oletko varma, että haluat vaihtaa ensisijaisen verkkotunnuksen?"
+
+#: modules/domains.php:105
+msgid "Proceed"
+msgstr "Jatka"
+
+#: modules/domains.php:106
+msgid "Cancel"
+msgstr "Peruuta"
 
 #: modules/instance-switcher.php:130
 msgid "Now in"
@@ -1583,54 +1667,3 @@ msgstr ""
 #: modules/upkeep.php:618
 msgid "Click \"Run Tests\" to run the Codeception tests"
 msgstr "Klikkaa “Suorita testit” -nappia suorittaaksesi Codeception-testit"
-
-#~ msgid "Security (beta)"
-#~ msgstr "Tietoturva (beta)"
-
-#~ msgid "Cruft Files (beta)"
-#~ msgstr "Roskatiedostot (beta)"
-
-#~ msgid "Optimize Images (beta)"
-#~ msgstr "Optimoi kuvia (beta)"
-
-#~ msgid "Tests"
-#~ msgstr "Testit"
-
-#~ msgid "Reports"
-#~ msgstr "Raportit"
-
-#~ msgid "Updates"
-#~ msgstr "Päivitykset"
-
-#~ msgid "Success"
-#~ msgstr "Onnistui"
-
-#~ msgid "Failure"
-#~ msgstr "Epäonnistui"
-
-#~ msgid "Toggle panel:"
-#~ msgstr "Näytä lisää:"
-
-#~ msgid "Shadows (beta)"
-#~ msgstr "Varjot (beta)"
-
-#~ msgid "Data Integrity"
-#~ msgstr "Tiedotojen eheys"
-
-#~ msgid "Tests (new Codeception)"
-#~ msgstr "Testit (uusi Codeception)"
-
-#~ msgid "Tests (legacy Rspec)"
-#~ msgstr "Testit (vanha Rspec)"
-
-#~ msgid ""
-#~ "Here you can test the core functionality of your WordPress installation. "
-#~ "Same results can be achieved via command line by running <code>wp-test-"
-#~ "legacy</code> there. For further information, please refer to <a href="
-#~ "\"https://seravo.com/docs/tests/integration-tests/\"> Seravo Developer "
-#~ "Documentation</a>."
-#~ msgstr ""
-#~ "Suorita sivuston toimivuustestit ja tarkista tulokset. Saman testin voi "
-#~ "suorittaa myös komentoriviltä komennolla <code>wp-test-legacy</code>. Lue "
-#~ "lisätietoja <a href=\"https://seravo.com/docs/tests/integration-tests/"
-#~ "\">Seravon kehittäjäohjeista</a>."
