--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Seravo Must-use Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
 "POT-Creation-Date: 2020-06-18T11:48:46+03:00\n"
-"PO-Revision-Date: 2020-06-18 12:52+0300\n"
+"PO-Revision-Date: 2020-06-18 18:01+0300\n"
 "Last-Translator: Samuli Lehtonen <samuli@seravo.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -924,7 +924,7 @@ msgid ""
 msgstr ""
 "Etsi ja poista lisäosia, jotka tällä hetkellä ei ole aktiivisena tai jotka "
 "ovat mahdollisesti haitallisia. Lue lisätiedot <a href=\"https://help.seravo."
-"fi/article/313-suositellut-lisaosat target=\"_BLANK\">suositelluista "
+"fi/article/313-suositellut-lisaosat\" target=\"_BLANK\">suositelluista "
 "lisäosista palvelinympäristössämme</a>."
 
 #: modules/security.php:320
